# File-based_CMS_Flask

./: .gitignore  README.md  app.py  pyproject.toml
cms/: users.yml
cms/data/: about.md  about.txt  changes.txt  history.txt
static/stylesheets/: app.css
templates/: edit.html  index.html  layout.html  new.html  sign_in.html
tests/: test_app.py  users.yml
